--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
           <suppressionsFileExpression>suppressions.xml</suppressionsFileExpression>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-pmd-plugin</artifactId>
+        <version>3.21.0</version>
+      </plugin>
     </plugins>
   </reporting>
 </project>
